# grid-tactics

./: .gitignore  CMakeLists.txt  README.md
include/gremlin/: Gremlin.hpp
include/gremlin/core/: Application.hpp  IGame.hpp  Process.hpp
include/gremlin/platform/: Input.hpp  Window.hpp
include/gremlin/render/: Renderer.hpp
src/: main.cpp
src/engine/core/: Application.cpp  Application.hpp
src/engine/platform/: Input.cpp  Input.hpp  Window.cpp  Window.hpp
src/engine/process/: ProcessManager.cpp  ProcessManager.hpp
src/engine/render/: Renderer.cpp  Renderer.hpp
src/game/: Game.cpp  Game.hpp  main.cpp
src/gremlin/core/: Application.cpp  ProcessManager.cpp
src/gremlin/platform/: Input.cpp  Window.cpp
src/gremlin/render/: Renderer.cpp
